tui/src/chatwidget/snapshots/rexux_tui__chatwidget__tests__exec_approval_history_decision_approved_short.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 47
expression: lines_to_single_string(&decision)
---
✔ You approved rexux to run echo hello world this time
